tests/errors/associated-type-witness-planned.ari
trait Source {
  fn next(self) -> i64
}

impl Source for i64 {
  type Item = i64;

  fn next(self) -> i64 {
    return self;
  }
}

fn main() -> i64 {
  return 0;
}
